--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "14.0.4",
     "react": "^18",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^18"
   },
   "devDependencies": {
