--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.29",
     "next": "14.0.4",
     "react": "^18",
     "react-animated-cursor": "^2.11.2",
