--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.29",
+    "gsap": "^3.12.4",
     "next": "14.0.4",
     "react": "^18",
     "react-animated-cursor": "^2.11.2",
