--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^2.2.6",
+    "@splinetool/runtime": "^1.0.2",
     "@studio-freight/lenis": "^1.0.29",
     "gsap": "^3.12.4",
     "next": "14.0.4",
